--- a/src/app/blog/create-post/create-post.component.html
+++ b/src/app/blog/create-post/create-post.component.html
@@ -8,7 +8,7 @@
 	    class="form-control"
 	    name="title"
 	    id="title"
-	    ngModel>
+	    [(ngModel)]="title">
 	</div>
 	<div class="form-group">
 		<strong class="text">Text of your post</strong>
