--- a/src/app/auth/register-modal/register-modal.component.html
+++ b/src/app/auth/register-modal/register-modal.component.html
@@ -20,7 +20,7 @@
         required
         email
         #email="ngModel"
-        [ngClass]="{'input-error': !email.valid && email.touched}">
+        [ngClass]="{'input-error': !email.valid && email.touched || checkErrors('email')}">
     </div>
     <div *ngIf="!email.valid && email.touched" class="validate-error">Please enter a valid value</div>
     <div *ngIf="checkErrors('email')" class="validate-error">{{ checkErrors('email') }}</div>
