--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="table-wrapper">
   <nav class="navbar-user">
-    <button *ngIf="myRole == 'Admin'" (click)="onCreateUser()">+CREATE</button>
+    <button *ngIf="myRole == 'admin'" (click)="onCreateUser()">+CREATE</button>
     <img [src]="myAvatarUrl" alt="" class="my-avatar">
     <span class="my-role">{{ myRole }}</span>
   </nav>
