--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,24 +1,6 @@
 <app-navbar></app-navbar>
 <div class="posts-wrapper">
-  <header>
-    <h2 class="heading"><span class="first-letter">D</span>ISCOVER THE WORLD OF THE TRUE ROMANTIC</h2>
-    <nav>
-      <ul>
-        <li>
-          <span>SHOP</span>
-        </li>
-        <li>
-          <span>LEARN</span>
-        </li>
-        <li [routerLink]="['./']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
-          <span>DISCOVER</span>
-        </li>
-        <li [routerLink]="['create-post']" routerLinkActive="active-link" *ngIf="myRole !== 'admin'">
-          <span>CREATE POST</span>
-        </li>
-      </ul>
-    </nav>
-  </header>
+  <app-header></app-header>
   <div class="blog-container">
     <span class="top-right-corner corner"></span>
     <span class="top-left-corner corner"></span>
