--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,7 +22,7 @@
         <a class="nav-link" routerLink="/users" *ngIf="isAuthorized()" routerLinkActive="active">USERS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">LEARN</a>
+        <a class="nav-link"  routerLink="/shop" href="#">SHOP</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">DISCOVER</a>
