--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -2,10 +2,7 @@
 <div class="posts-wrapper">
   <app-header></app-header>
   <div class="blog-container">
-    <span class="top-right-corner corner"></span>
-    <span class="top-left-corner corner"></span>
-    <span class="bottom-right-corner corner"></span>
-    <span class="bottom-left-corner corner"></span>
     <router-outlet></router-outlet>
+    <app-corners></app-corners>
   </div>
 </div>
