--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -71,3 +71,67 @@ header {
     }
   }
 }
+
+@media screen and (max-width:991px){
+  header {
+    .heading {
+      font-size: 20px;
+      padding-bottom: 0;
+      align-items: center;
+      .first-letter {
+        font-size: 30px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width:768px){
+  header {
+    height: 110px;
+    .heading {
+      font-size: 17px;
+      align-items: center;
+      height: 70px;
+      .first-letter {
+        font-size: 25px;
+      }
+    }
+    ul {
+      li {
+        margin: 0 4%;
+        span {
+          font-size: 16px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  header {
+    text-align: center;
+    .heading{
+      display: block;
+      padding-top: 20px;
+      margin-bottom: 6px;
+    }
+    ul {
+      li {
+        span {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 450px) {
+  header {
+    ul {
+      li {
+        margin: 0 2%;
+      }
+    }
+  }
+}
+
