--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -2,36 +2,8 @@
 <div class="shop-wrapper">
   <h2 class="heading"><span class="first-letter">D</span>ISCOVER THE WORLD OF THE TRUE ROMANTIC</h2>
   <section class="category-container">
-    <h2 class="heading"><span class="first-letter">S</span>HOP THE TRUE DRAMATIC</h2>
-    <div class="wrapper">
-      <div class="filters">
-        <h5 class="filter-title">SHOP BY</h5>
-        <ul>
-          <li>Dresses & Coats</li>
-          <li>Tops</li>
-          <li>Bottoms</li>
-          <li>Shoes</li>
-          <li>Accessories</li>
-        </ul>
-        <h5 class="filter-title">REFINE</h5>
-        <ul>
-          <li>Size</li>
-          <li>Colour</li>
-          <li>Price</li>
-        </ul>
-      </div>
-      <div class="content">
-        <div class="card">
-          <img src="" alt="" class="image-box">
-          <div class="manage-panel">
-            <span class="icon wish-icon"></span>
-            <span class="icon eye-icon"></span>
-            <span class="icon bag-icon"></span>
-          </div>
-          <div class="brand">Brand</div>
-          <div class="price">$100</div>
-        </div>
-      </div>
-    </div>
+    <router-outlet></router-outlet>
+    <app-corners></app-corners>
   </section>
+  <a class="btn-add" (click)="onEditProduct()"><i class="material-icons">add</i></a>
 </div>
