--- a/src/app/shop/shop.component.scss
+++ b/src/app/shop/shop.component.scss
@@ -34,60 +34,68 @@
       background-color: white;
       margin: 0;
     }
-    .wrapper {
-      display: flex;
-      width: 100%;
-      .filters {
-        width: 200px;
-        font-family: 'goudy_old_stylebold_italic';
-        margin-right: 50px;
-        .filter-title {
-          border-bottom: 2px solid black;
-        }
-      }
-      .content {
-        display: flex;
-        width: 100%;
-        font-family: 'goudy_old_stylebold_italic';
-        .card {
-          width: 30%;
-          .image-box {
+  }
+  .btn-add {
+    width: 56px;
+    height: 56px;
+    padding: 0;
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+    cursor: pointer;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 56px;
+    overflow: hidden;
+    z-index: 10;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    background-color: blue;
+    border-radius: 50%;
+    i {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+    }
+  }
+}
 
-          }
-          .manage-panel {
-            border: 2px solid black;
-            height: 45px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            .icon {
-              display: inline-block;
-              height: 25px;
-              width: 25px;
-              margin: 0 7px;
-              background-repeat: no-repeat;
-              background-size: 100%;
-              background-position: center;
-            }
-            .wish-icon {
-              background-image: url('/assets/shop/heart.svg');
-            }
-            .eye-icon {
-              background-image: url('/assets/shop/eye.svg');
-            }
-            .bag-icon {
-              background-image: url('/assets/shop/bag.svg');
-            }
-          }
-          .brand {
-            font-size: 24px;
-          }
-          .price {
-            font-size: 24px;
-            color: rgba(0, 0, 0, .7);
-          }
-        }
+@media screen and (max-width:991px){
+  .shop-wrapper {
+    .heading {
+      font-size: 20px;
+      padding-bottom: 0;
+      align-items: center;
+      .first-letter {
+        font-size: 30px;
       }
+    }
+  }
+}
+
+@media screen and (max-width:768px){
+  .shop-wrapper {
+    height: 110px;
+    .heading {
+      font-size: 17px;
+      align-items: center;
+      height: 70px;
+      .first-letter {
+        font-size: 25px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .shop-wrapper{
+    text-align: center;
+    .heading{
+      display: block;
+      padding-top: 20px;
+      margin-bottom: 6px;
     }
   }
 }
