--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -1,4 +1,4 @@
-<h2 class="heading"><span class="first-letter">S</span>HOP THE TRUE DRAMATIC DRESSES</h2>
+<h2 class="heading">SHOP THE TRUE DRAMATIC DRESSES</h2>
 <div class="wrapper">
   <div class="filters">
     <h5 class="filter-title">SHOP BY</h5>
