--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,9 +1,11 @@
-<app-navbar></app-navbar>
-<div class="shop-wrapper">
-  <h2 class="heading"><span class="first-letter">D</span>ISCOVER THE WORLD OF THE TRUE ROMANTIC</h2>
-  <section class="category-container">
-    <router-outlet></router-outlet>
-    <app-corners></app-corners>
-  </section>
+<div class="host">
+  <app-navbar></app-navbar>
+  <div class="shop-wrapper">
+    <h2 class="heading"><span class="first-letter">D</span>ISCOVER THE WORLD OF THE TRUE ROMANTIC</h2>
+    <section class="category-container">
+      <router-outlet></router-outlet>
+      <app-corners></app-corners>
+    </section>
+  </div>
   <a class="btn-add" (click)="onEditProduct()"><i class="material-icons">add</i></a>
 </div>
