--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import "~@ng-select/ng-select/themes/default.theme.css";
+
 @font-face {
   font-family: 'goudy_old_stylebold';
   src: url('/assets/Fonts/goudy-style-bold/911fonts.com_goudyoldstylebold__-_911fonts.com_fonts_6fnh-webfont.woff2') format('woff2'),
