--- a/src/app/shop/products/products.component.scss
+++ b/src/app/shop/products/products.component.scss
@@ -4,15 +4,11 @@
   align-items: flex-end;
   padding-bottom: 20px;
   margin-top: 20px;
+  margin-bottom: 0;
   height: 100px;
   font-weight: 600;
   letter-spacing: 1px;
   font-family: 'goudy_old_style_small_caps_Rg';
-  .first-letter {
-    font-family: 'flaemische_kanzleischriftRg';
-    font-size: 50px;
-    line-height: 1;
-  }
 }
 .wrapper {
   display: flex;
@@ -28,7 +24,7 @@
   .content {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-template-rows: auto [last-line];
     font-family: 'goudy_old_stylebold_italic';
   }
