--- a/src/app/shop/shop.component.scss
+++ b/src/app/shop/shop.component.scss
@@ -1,45 +1,11 @@
-.shop-wrapper {
-  background-color: white;
-  height: 140px;
-  .heading {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    padding-bottom: 20px;
-    margin-top: 20px;
-    margin-bottom: 30px;
-    height: 100px;
-    background-color: #eee;
-    font-weight: 600;
-    letter-spacing: 1px;
-    font-family: 'goudy_old_style_small_caps_Rg';
-    .first-letter {
-      font-family: 'flaemische_kanzleischriftRg';
-      font-size: 50px;
-      line-height: 1;
-    }
-  }
-
-  .category-container {
-    background-color: white;
-    min-height: 500px;
-    border-top: 15px solid black;
-    border-bottom: 15px solid black;
-    border-right: 2px solid black;
-    border-left: 2px solid black;
-    margin-bottom: 30px;
-    position: relative;
-    padding: 0 50px 50px;
-    h2 {
-      background-color: white;
-      margin: 0;
-    }
-  }
+.host {
+  position: relative;
+  height: 100%;
   .btn-add {
     width: 56px;
     height: 56px;
     padding: 0;
-    position: absolute;
+    position: fixed;
     right: 30px;
     bottom: 30px;
     cursor: pointer;
@@ -60,7 +26,45 @@
       color: white;
     }
   }
+  .shop-wrapper {
+    background-color: white;
+    height: 140px;
+    .heading {
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+      padding-bottom: 20px;
+      margin-top: 20px;
+      margin-bottom: 0;
+      height: 100px;
+      font-weight: 600;
+      letter-spacing: 1px;
+      font-family: 'goudy_old_style_small_caps_Rg';
+      .first-letter {
+        font-family: 'xirwenaregular';
+        font-size: 34px;
+        line-height: 1;
+      }
+    }
+
+    .category-container {
+      background-color: white;
+      min-height: 500px;
+      border-top: 15px solid black;
+      border-bottom: 15px solid black;
+      border-right: 2px solid black;
+      border-left: 2px solid black;
+      margin-bottom: 30px;
+      position: relative;
+      padding: 0 50px 50px;
+      h2 {
+        background-color: white;
+        margin: 0;
+      }
+    }
+  }
 }
+
 
 @media screen and (max-width:991px){
   .shop-wrapper {
