--- a/src/app/shop/products/edit-product/edit-product.component.html
+++ b/src/app/shop/products/edit-product/edit-product.component.html
@@ -67,11 +67,13 @@
           <img src="/assets/cloud-download-interface-symbol.svg" alt="" class="icon-cloud-download">
           <span class="warning" *ngIf="warning">Download images with extension jpeg, jpg or png</span>
       </div>
-      <input type="file" class="inputfile" #fileinput (change)="onUpload($event)">
+      <input type="file" class="inputfile" #fileinput multiple="multiple" (change)="onUpload($event)">
     </label>
     <div class="wrapper-file-list">
-      <div *ngFor="let file of files; let key = index" class="file-list" (click)="makeMainImg(key)" >
-        <img image-preview-directive imageKey="preview{{key}}" [ngClass]="'preview' + key"  [ngClass]="{'highlight-main-img': key == selectedImgKey}"/>
+      <div *ngFor="let imageUrl of imageUrls; let key = index" class="file-list" (click)="makeMainImg(key)" >
+
+        <img [src]="imageUrl" [ngClass]="'preview' + key"  [ngClass]="{'highlight-main-img': key == selectedImgKey}"/>
+
         <div class="remove-container">
           <a class="remove" (click)="removeFile(key, $event)" href="#">
             <img src="/assets/icon-close.png" alt="" class="icon-close">
