--- a/src/app/shop/products/edit-product/edit-product.component.html
+++ b/src/app/shop/products/edit-product/edit-product.component.html
@@ -72,7 +72,6 @@
     <div class="wrapper-file-list" *ngIf="files.length">
       <div *ngFor="let file of files; let key = index" class="file-list" (click)="makeMainImg(key)">
         <img *ngIf="imageUrls.length" [src]="imageUrls[file.id]" [ngClass]="{'highlight-main-img': key == selectedImgKey}"/>
-
         <div class="remove-container">
           <a class="remove" (click)="removeFile(key, $event)" href="#">
             <img src="/assets/icon-close.png" alt="" class="icon-close">
@@ -81,6 +80,7 @@
       </div>
     </div>
   </div>
+  <div class="sp-wave" *ngIf="loading"></div>
   <button type="submit" class="my-button button-update" (click)="onCreateProduct()">Save product</button>
 </form>
 
