--- a/src/app/shop/products/edit-product/edit-product.component.html
+++ b/src/app/shop/products/edit-product/edit-product.component.html
@@ -49,7 +49,7 @@
   </div>
   <div class="form-group">
     <strong>Category</strong>
-    <ng-select [items]="categories | async"
+    <ng-select [items]="categories"
                bindLabel="name"
                bindValue="id"
                [(ngModel)]="selectedCategory" name="category" placeholder="Chose category">
