--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -17,8 +17,6 @@
     </ul>
   </div>
   <div class="content">
-    <app-product></app-product>
-    <app-product></app-product>
-    <app-product></app-product>
+    <app-product *ngFor="let product of products" [product]="product"></app-product>
   </div>
 </div>
