--- a/src/app/shop/products/products.component.scss
+++ b/src/app/shop/products/products.component.scss
@@ -10,6 +10,15 @@
   letter-spacing: 1px;
   font-family: 'goudy_old_style_small_caps_Rg';
 }
+/deep/ .masonry-container {
+  text-align: center;
+}
+/deep/ .masonry-item {
+  width: 240px;
+  cursor: pointer;
+  z-index: 1;
+  margin: 5px;
+}
 .wrapper {
   display: flex;
   width: 100%;
@@ -21,11 +30,30 @@
       border-bottom: 2px solid black;
     }
   }
-  .content {
+  .content-wrapper {
     width: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-template-rows: auto [last-line];
-    font-family: 'goudy_old_stylebold_italic';
+    .content {
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      grid-template-rows: auto [last-line];
+      font-family: 'goudy_old_stylebold_italic';
+    }
+    .button-wrapper {
+      text-align: center;
+      margin-top: 30px;
+      .load {
+        font-family: 'goudy_old_stylebold_italic';
+        background-color: #eee;
+        border-radius: 5px;
+        padding: 5px 10px;
+        cursor: pointer;
+        border: 3px solid blue;
+        color: black;
+      }
+    }
+
   }
+
 }
+
