--- a/src/app/shop/products/edit-product/edit-product.component.html
+++ b/src/app/shop/products/edit-product/edit-product.component.html
@@ -1,4 +1,4 @@
-<form #productForm="ngForm">
+<form #productForm="ngForm" *ngIf="categories && categories.length">
   <div class="form-group">
     <label for="title">
       <strong>Brand</strong>
@@ -79,7 +79,14 @@
       </div>
     </div>
   </div>
-  <div class="sp-wave" *ngIf="loading"></div>
-  <button type="submit" class="my-button button-update" (click)="onCreateProduct()" [disabled]="isFormInvalid()">Save product</button>
+
+  <button type="submit" class="my-button button-update" (click)="onCreateProduct()" [disabled]="isFormInvalid()">
+    <div class="spinner" *ngIf="loading">
+      <div class="bounce1"></div>
+      <div class="bounce2"></div>
+      <div class="bounce3"></div>
+    </div>
+    <span *ngIf="!loading">Save product</span>
+  </button>
 </form>
 
