--- a/src/app/shop/products/edit-product/edit-product.component.scss
+++ b/src/app/shop/products/edit-product/edit-product.component.scss
@@ -92,49 +92,46 @@ form {
   }
 }
 
-.sp-wave {
-  border-radius: 50%;
-  position: relative;
-  opacity: 1;
-  width: 50px;
-  height: 50px;
-}
-.sp-wave:before, .sp-wave:after  {
-  content:'';
-  border: 1px $spCol solid;
-  border-radius: 50%;
+.spinner {
   width: 100%;
-  height: 100%;
-  position: absolute;
-  left:0px;
+  display: flex;
+  justify-content: center;
 }
-.sp-wave:before {
-  transform: scale(1,1);
-  opacity: 1;
-  -webkit-animation: spWaveBe 0.6s infinite linear;
-  animation: spWaveBe 0.6s infinite linear;
+
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: #333;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
 }
-.sp-wave:after {
-  transform: scale(0,0);
-  opacity: 0;
-  -webkit-animation: spWaveAf 0.6s infinite linear;
-  animation: spWaveAf 0.6s infinite linear;
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
 }
-@-webkit-keyframes spWaveAf {
-  from { -webkit-transform: scale(0.5,0.5); opacity: 0; }
-  to { -webkit-transform: scale(1,1); opacity: 1; }
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
 }
-@keyframes spWaveAf {
-  from { transform: scale(0.5,0.5); opacity: 0; }
-  to { transform: scale(1,1); opacity: 1; }
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
 }
-@-webkit-keyframes spWaveBe {
-  from { -webkit-transform: scale(1,1); opacity: 1; }
-  to { -webkit-transform: scale(1.5,1.5); opacity: 0; }
-}
-@keyframes spWaveBe {
-  from { -webkit-transform: scale(1,1); opacity: 1; }
-  to { -webkit-transform: scale(1.5,1.5); opacity: 0; }
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% {
+      -webkit-transform: scale(1.0);
+      transform: scale(1.0);
+    }
 }
 
 
@@ -164,6 +161,7 @@ form {
   border-radius: 5px;
   padding: 5px 10px;
   cursor: pointer;
+  width: 120px;
 }
 .button-update {
   border: 3px solid blue;
