--- a/src/app/shop/products/product/product.component.html
+++ b/src/app/shop/products/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="product-card">
+<div class="product-card" *ngIf="product">
   <div class="img-wrapper">
     <img [src]="imageUrl" alt="" class="image">
   </div>
