Make product details page and start making cart modal.

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -52,7 +52,7 @@ nav {
         background-image: url('../../assets/MenuIcons/settings.png');
       }
       .nav-icon-cart {
-        background-image: url('../../assets/MenuIcons/cart.png');
+        background-image: url('../../assets/shop/bag.svg');
       }
       .nav-icon {
         background-size: 100%;
