--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,6 +79,14 @@ body {
   box-shadow: 0 0 3px 2px rgba(0, 0, 0, .7);
 }
 
+.my-button {
+  font-family: 'goudy_old_stylebold_italic';
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+  color: black;
+}
 
 
 
