--- a/src/app/shop/products/product/product.component.html
+++ b/src/app/shop/products/product/product.component.html
@@ -1,13 +1,15 @@
-<div class="product-card" *ngIf="product" (click)="openProductDetails()">
-  <div class="img-wrapper">
+<div class="product-card" *ngIf="product">
+  <div class="img-wrapper" (click)="openProductDetails()">
     <img [src]="imageUrl" alt="" class="image">
   </div>
   <div class="manage-panel">
     <span class="icon wish-icon"></span>
-    <span class="icon eye-icon"></span>
+    <span class="icon eye-icon" (click)="openProductDetails()"></span>
     <span class="icon bag-icon"></span>
   </div>
   <div class="brand">{{ product.brand }}</div>
-  <div class="price" [ngStyle]="{textDecoration : product.discount ? 'line-through' : none}">${{product.price}}</div>
-  <div class="price" *ngIf="product.discount">${{product.discount}}</div>
+  <div class="price-wrapper">
+    <div class="price" [ngStyle]="{textDecoration : product.discount ? 'line-through' : none, color : product.discount ? 'grey' : 'black'}">${{product.price}}</div>
+    <div class="price" *ngIf="product.discount">${{product.discount}}</div>
+  </div>
 </div>
