--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -1,3 +1,4 @@
+<div #container>
 <h2 class="heading">SHOP THE TRUE DRAMATIC DRESSES</h2>
 <div class="wrapper">
   <div class="filters">
@@ -16,20 +17,27 @@
       <li>Price</li>
     </ul>
   </div>
-  <div class="content-wrapper">
+  <div class="content-wrapper" >
+    <div class="lds-ripple" *ngIf="initLoading"><div></div><div></div></div>
+    <!--<ngx-masonry class="masonry-container" [useImagesLoaded]="false" *ngIf="!initLoading" >-->
+      <!--<ngxMasonryItem *ngFor="let product of products" class="masonry-item" [attr.id]="'item' + product.id">-->
+        <!--<app-product [product]="product"></app-product>-->
+      <!--</ngxMasonryItem>-->
+    <!--</ngx-masonry>-->
 
-    <ngx-masonry class="masonry-container" [useImagesLoaded]="false">
-      <ngxMasonryItem *ngFor="let product of products" class="masonry-item">
-        <app-product [product]="product"></app-product>
-      </ngxMasonryItem>
-    </ngx-masonry>
+    <app-product *ngFor="let product of products" [product]="product" [attr.id]="'item' + product.id"></app-product>
 
-    <!--<app-product *ngFor="let product of products" [product]="product"></app-product>-->
-
-    <div class="button-wrapper" *ngIf="products.length >= 3 && products.length < totalAmount">
-      <button (click)="loadMore()" class="my-button load">Load more</button>
+    <div class="button-wrapper" *ngIf="products.length >= 3 && products.length < totalAmount && !initLoading">
+      <button (click)="loadMore()" class="my-button load">
+        <span *ngIf="!loading">Load more</span>
+        <div class="spinner" *ngIf="loading">
+          <div class="bounce1"></div>
+          <div class="bounce2"></div>
+          <div class="bounce3"></div>
+        </div>
+      </button>
     </div>
   </div>
 </div>
-
-
+</div>
+<!--<button (click)="scroll()">Scrol</button>-->
