--- a/src/app/shop/products/product-details/product-details.component.scss
+++ b/src/app/shop/products/product-details/product-details.component.scss
@@ -1,3 +1,26 @@
+.back-block {
+  position: absolute;
+  left: 50%;
+  top: 20px;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  font-family: 'goudy_old_stylebold';
+  cursor: pointer;
+  &:after {
+    bottom: 0;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: black;
+  }
+  .back-icon {
+    width: 30px;
+    height: 20px;
+  }
+}
 .container {
   display: flex;
   width: 100%;
@@ -52,6 +75,8 @@
     }
   }
 }
+
+
 
 @media screen and (max-width:991px){
   .container {
