Change style of buttons.

--- a/src/app/shop/products/edit-product/edit-product.component.html
+++ b/src/app/shop/products/edit-product/edit-product.component.html
@@ -23,7 +23,7 @@
   </div>
   <div class="form-group">
     <label for="discount">
-      <strong>Discount</strong>
+      <strong>With Discount</strong>
     </label>
     <input
       type="number"
