--- a/src/app/shop/products/product-details/product-details.component.scss
+++ b/src/app/shop/products/product-details/product-details.component.scss
@@ -8,14 +8,6 @@
   font-size: 20px;
   font-family: 'goudy_old_stylebold';
   cursor: pointer;
-  &:after {
-    bottom: 0;
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background-color: black;
-  }
   .back-icon {
     width: 30px;
     height: 20px;
@@ -46,9 +38,17 @@
     }
     .ng-select.custom {
       width: 150px;
+      border: 2px solid rgba(0, 0, 0, .7);
+      border-radius: 4px;
     }
     .ng-select.custom .ng-select-container  {
       width: 150px;
+    }
+    /deep/ .ng-select .ng-select-container {
+      border: none;
+    }
+    /deep/ .ng-select .ng-select-container .ng-value-container .ng-placeholder {
+      color: rgba(0, 0, 0, .7);
     }
   }
   .sidebar-wrapper {
@@ -62,17 +62,70 @@
     .cta {
       display: flex;
       margin-top: 20px;
+      border: 2px solid black;
+      color: #000;
+      z-index:0;
+      position: relative;
+      background: linear-gradient(135deg, #71767c, #fff);
+      box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+      //&:after {
+      //  content: '';
+      //  top: 0;
+      //  transform: translateX(100%);
+      //  width: 100%;
+      //  height: 100%;
+      //  position: absolute;
+      //  z-index: 1;
+      //  background: -moz-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(128, 186, 232, 0) 99%, rgba(125, 185, 232, 0) 100%); /* FF3.6+ */
+      //  background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(50%, rgba(255, 255, 255, 0.8)), color-stop(99%, rgba(128, 186, 232, 0)), color-stop(100%, rgba(125, 185, 232, 0))); /* Chrome,Safari4+ */
+      //  background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(128, 186, 232, 0) 99%, rgba(125, 185, 232, 0) 100%); /* Chrome10+,Safari5.1+ */
+      //  background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(128, 186, 232, 0) 99%, rgba(125, 185, 232, 0) 100%); /* Opera 11.10+ */
+      //  background: -ms-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(128, 186, 232, 0) 99%, rgba(125, 185, 232, 0) 100%); /* IE10+ */
+      //  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(128, 186, 232, 0) 99%, rgba(125, 185, 232, 0) 100%); /* W3C */
+      //  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#007db9e8', GradientType=1); /* IE6-9 */
+      //  animation: slide 10s infinite;
+      //}
       .icon {
-        width: 20px;
+        width: 30px;
+        height: 20px;
         margin-left: 7px;
+        animation: zoom 1s linear infinite;
       }
     }
-    .cart {
-      border: 2px solid blue;
+
+    @keyframes slide {
+      0% {transform:translateX(-100%);}
+      100% {transform:translateX(100%);}
     }
+
     .heart {
-      border: 2px solid red;
+      //background: #e23f50;
+      //color: #e23f50;
     }
+  }
+}
+
+@keyframes zoom {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
   }
 }
 
