--- a/src/app/shop/products/products.component.scss
+++ b/src/app/shop/products/products.component.scss
@@ -44,7 +44,9 @@
       text-align: center;
       margin-top: 30px;
       .load {
-        border: 3px solid blue;
+        border: 2px solid black;
+        background: linear-gradient(135deg, #71767c, #fff);
+        box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
       }
     }
 
