--- a/src/app/shop/products/edit-product/edit-product.component.html
+++ b/src/app/shop/products/edit-product/edit-product.component.html
@@ -80,7 +80,7 @@
     </div>
   </div>
 
-  <button type="submit" class="my-button button-update" (click)="onCreateProduct()" [disabled]="isFormInvalid()">
+  <button type="submit" class="my-button" (click)="onCreateProduct()" [disabled]="isFormInvalid()">
     <div class="spinner" *ngIf="loading">
       <div class="bounce1"></div>
       <div class="bounce2"></div>
