--- a/src/app/shop/cart/cart-modal/cart-modal.component.html
+++ b/src/app/shop/cart/cart-modal/cart-modal.component.html
@@ -1,9 +1,23 @@
-<div class="modal-header">
-  <h5 class="modal-title">The product was added to your cart</h5>
-  <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="modalRef.hide()">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
-<div class="modal-body">
-
-</div>
+<ng-container *ngIf="currentProduct">
+  <div class="modal-header">
+    <h5 class="modal-title">The product was added to your cart</h5>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <img [src]="imagePath" alt="" class="cart-img">
+    <div class="block">
+      <div class="title brand">{{currentProduct.brand}}</div>
+      <div><span class="title">Category:</span> {{currentProduct.category_id.category}}</div>
+      <div><span class="title">Size:</span> {{size}}</div>
+    </div>
+    <div class="block">
+      <div class="price-wrapper">
+        <span [ngStyle]="{textDecoration : currentProduct.discount ? 'line-through' : none, color : currentProduct.discount ? 'grey' : 'blue'}">${{currentProduct.price}}</span>
+        <span class="discount" *ngIf="currentProduct.discount">${{currentProduct.discount}}</span>
+      </div>
+      <div class="quantity">{{quantity}} qty.</div>
+    </div>
+  </div>
+</ng-container>
