--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,7 +81,9 @@ body {
 
 .my-button {
   font-family: 'goudy_old_stylebold_italic';
-  background-color: white;
+  border: 2px solid black;
+  background: linear-gradient(135deg, #71767c, #fff);
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
   border-radius: 5px;
   padding: 5px 10px;
   cursor: pointer;
