--- a/src/app/shop/products/product-details/product-details.component.html
+++ b/src/app/shop/products/product-details/product-details.component.html
@@ -3,7 +3,7 @@
   <span>Back to search</span>
 </div>
 <div class="container" >
-  <ng-container *ngIf="!loading && product">
+  <ng-container *ngIf="!productDetailsLoading && product">
   <div class="image-wrapper">
     <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
   </div>
@@ -11,7 +11,7 @@
     <div class="brand">{{product.brand}}</div>
     <div class="material"><span class="title">Category:</span> {{product.category_id.category}}</div>
     <div class="description">
-      <span class="title">Description:&emsp;</span>
+      <span class="title">Description:&emsp</span>
       <span [innerHTML]="product.description"></span>
     </div>
     <div class="material"><span class="title">Material:</span> {{product.material}}</div>
@@ -23,24 +23,31 @@
     </div>
   </div>
   <div class="sidebar-wrapper">
-    <div [ngStyle]="{textDecoration : product.discount ? 'line-through' : none, color : product.discount ? 'grey' : 'blue'}">
+    <div [ngStyle]="{textDecoration : product.discount ? 'line-through' : none, color : product.discount ? 'grey' : 'black'}">
       <span class="title">Price: $</span>
       <span>{{product.price}}</span>
     </div>
     <div class="discount" *ngIf="product.discount"><span class="title">With Discount: $</span>{{product.discount}}</div>
-    <button class="my-button cta cart" (click)="openModalCart()">
-      <span>Add to the Cart</span>
-      <svg fill="#000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"x="0px" y="0px"
-         width="20px" height="20px" viewBox="0 0 48 48" style="enable-background:new 0 0 48 48;" xml:space="preserve" class="icon">
-      <g>
-        <path d="M15.733,20.125c1.104,0,2-0.896,2-2v-7.8C17.733,6.838,20.57,4,24.058,4c3.487,0,6.325,2.838,6.325,6.325v7.8
-          c0,1.104,0.896,2,2,2c1.104,0,2-0.896,2-2v-7.8C34.383,4.632,29.751,0,24.058,0c-5.692,0-10.324,4.632-10.324,10.325v7.8
-          C13.733,19.229,14.629,20.125,15.733,20.125z"/>
-        <path d="M47,15.631H36.383v2.494c0,2.206-1.794,4-4,4c-2.205,0-4-1.794-4-4v-2.494h-8.649v2.494c0,2.206-1.794,4-4,4
-          s-4-1.794-4-4v-2.494H1c-0.552,0-0.893,0.435-0.762,0.971L7.235,45.1C7.658,46.702,9.343,48,11,48h26
-          c1.658,0,3.342-1.299,3.767-2.9l6.996-28.498C47.893,16.065,47.553,15.631,47,15.631z"/>
-      </g>
-    </svg>
+    <button class="my-button cta cart" (click)="openModalCart()" [ngClass]="{'loading-process': addToCartLoading}">
+      <ng-container>
+        <span>Add to the Cart</span>
+        <svg fill="#000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"x="0px" y="0px"
+           width="20px" height="20px" viewBox="0 0 48 48" style="enable-background:new 0 0 48 48;" xml:space="preserve" class="icon">
+        <g>
+          <path d="M15.733,20.125c1.104,0,2-0.896,2-2v-7.8C17.733,6.838,20.57,4,24.058,4c3.487,0,6.325,2.838,6.325,6.325v7.8
+            c0,1.104,0.896,2,2,2c1.104,0,2-0.896,2-2v-7.8C34.383,4.632,29.751,0,24.058,0c-5.692,0-10.324,4.632-10.324,10.325v7.8
+            C13.733,19.229,14.629,20.125,15.733,20.125z"/>
+          <path d="M47,15.631H36.383v2.494c0,2.206-1.794,4-4,4c-2.205,0-4-1.794-4-4v-2.494h-8.649v2.494c0,2.206-1.794,4-4,4
+            s-4-1.794-4-4v-2.494H1c-0.552,0-0.893,0.435-0.762,0.971L7.235,45.1C7.658,46.702,9.343,48,11,48h26
+            c1.658,0,3.342-1.299,3.767-2.9l6.996-28.498C47.893,16.065,47.553,15.631,47,15.631z"/>
+        </g>
+      </svg>
+      </ng-container>
+      <div class="spinner" *ngIf="addToCartLoading">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+      </div>
     </button>
     <button class="my-button cta heart">
       <span>Add to the Wish List</span>
@@ -54,6 +61,6 @@
     </button>
   </div>
   </ng-container>
-  <div class="lds-ripple" *ngIf="loading"><div></div><div></div></div>
+  <div class="lds-ripple" *ngIf="productDetailsLoading"><div></div><div></div></div>
 </div>
 
