--- a/src/app/shop/products/product/product.component.scss
+++ b/src/app/shop/products/product/product.component.scss
@@ -8,15 +8,13 @@
     width: auto;
     position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
     cursor: pointer;
     margin-bottom: 20px;
-  .image {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-  }
+    .image {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: cover;
+    }
   }
   .manage-panel {
     border: 2px solid black;
